# goph619-examples

./: .gitignore  README.md  mac_setup_steps.txt  pyproject.toml  ubuntu_setup_steps.txt  windows_setup_steps.txt
examples/: exp_plot.py  sin_cos_plot.py  triangulation.py
src/goph619_examples/: classes.py  functions.py
tests/: test_exp.py
